# mxc

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: linux.yml  release_setup.yml  rust.yml
loudgain/: .gitignore  Cargo.toml  build.rs
loudgain/src/: lib.rs  main.rs
loudgain_tester/: Cargo.toml
loudgain_tester/src/: backend.rs  cli.rs  expect.rs  main.rs  temp_dir.rs
loudgainer/: Cargo.toml
loudgainer/src/: lib.rs  main.rs  options.rs  record.rs
mxc/: Cargo.toml
mxc/src/: audiofile.rs  error.rs  fftag.rs  lib.rs  nerics.rs  options.rs  replay_gain.rs  walker.rs
mxc/src/seeders/: mod.rs
mxc/src/taggers/: lofty.rs  mod.rs
taglib/: Cargo.toml
taglib/src/: lib.rs
taglibxx/: Cargo.toml  build.rs
taglibxx/examples/: version.rs
taglibxx/src/: lib.rs  tagg.cc  tagg.h
