[package]
name = "loudgainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mxc = { path = "../mxc" }
serde = { version = "1.0", features = ["derive"] }
gumdrop = { version = "0.8", features = ["default_expr"] }
# logging
log = "0.4"
env_logger= "0.9"